# graded-haskell

./: .gitignore  ARTIFACT.md  LICENSE  README.md
DDC/: ARTIFACT-README.txt  ARTIFACT.md  Artifact.txt  Auxiliary.ott  Qualitative.ott  README.md
DDC/src/: CoqSrc.mk  Makefile  Qualitative_inf.full  Qualitative_inf.v  Qualitative_ott.v  _CoqProject  classes.v  confluence.v  consist.v  defeq.v  erasure.v  geq.v  grade.v  grade_sig.v  labels.v  metalib.v  narrowing.v  par.v  progress.v  pumping.v  sort_sig.v  spec.mng  spec.tex  strong_exists.v  subst.v  tactics.v  typing.patch  typing.v  typing_ctx_fv.v  uniq.v  weakening.v
GraD/: ARTIFACT.md  graded-haskell.opam
GraD/src/: CoqSrc.mk  Makefile  _CoqProject  beta.v  dctx.v  dctx_sub.v  dqtt.ott  dqtt_inf.v  dqtt_ott.v  semimodule.v  structural.v  usage_sig.v
GraD/src-def/: Makefile  README.md  _CoqProject  dqtt.ott  dqtt_ott.v  inversion.v  spec.tex  usage.v
src/: Makefile  dqtt.ott  dqtt.v  dqtt_inf.v  dqtt_ott.v  spec.tex
src-def/: CoqSrc.mk  beta.v  dctx.v  dctx_sub.v  dqtt.v  dqtt_inf.v  metalib.v  structural.v  tactics.v  usage_sig.v
